--- a/options.html
+++ b/options.html
@@ -346,6 +346,8 @@ function updatePredictedHitsCount() {
     </select><br>
     <label for="hover_timeout">Hover to read time (ms):</label>
     <input type="text" name="hover_timeout" validator="required,number,positive"><br>
+    <label for="show_expanded_urls">Expand shortened URLs:</label>
+    <input type="checkbox" id="show_expanded_urls" name="show_expanded_urls" /><br>
     <label for="reply_all">Reply to all mentioned:</label>
     <input type="checkbox" style="margin-bottom: 7px;" id="reply_all" name="reply_all" />
     <br />
