--- a/popup.html
+++ b/popup.html
@@ -4,9 +4,11 @@
 <!-- Theme specific CSS files are loaded later by the ThemeManager -->
 <link rel="stylesheet" type="text/css" href="css/base.css" />
 <link rel="stylesheet" type="text/css" href="css/simple_select.css" />
+<link rel="stylesheet" type="text/css" href="css/tipsy.css" />
 
 <script>
 var MAX_TWEET_SIZE = 140;
+var urlExpander = chrome.extension.getBackgroundPage().urlExpander;
 var tweetManager = chrome.extension.getBackgroundPage().TweetManager.instance;
 var twitterBackend = tweetManager.twitterBackend;
 var OptionsBackend = chrome.extension.getBackgroundPage().OptionsBackend;
@@ -25,6 +27,7 @@ if(!twitterBackend.authenticated() && !twitterBackend.tokenRequested()) {
 
 <script type="text/javascript" src="lib/3rdparty/jquery.js"></script>
 <script type="text/javascript" src="lib/3rdparty/jquery-ui-custom.js"></script>
+<script type='text/javascript' src='lib/3rdparty/jquery.tipsy.js'></script>
 
 <!--script type="text/javascript" src="lib/debug.js"></script-->
 <script type="text/javascript" src="lib/shortener_lib.js"></script>
@@ -506,12 +509,43 @@ var Renderer = {
     return new Date(inputTimestamp).toLocaleDateString() + " " + new Date(inputTimestamp).toLocaleTimeString();
   },
 
+  expandLink: function (aElement, url) {
+    if(!OptionsBackend.get('show_expanded_urls')) {
+      return;
+    }
+    $(aElement).tipsy({
+      title: function() {
+        return '<img src="img/loading.gif" /> Loading long url...';
+      },
+      html: true,
+      showNow: true,
+      gravity: $.fn.tipsy.autoWE
+    });
+    urlExpander.expand(url,
+      function expanded(success, isShortened, longUrl) {
+        if(!isShortened) {
+          $(aElement).tipsy({hideNow: true});
+          return;
+        }
+        $(aElement).tipsy({
+          title: function() {
+            if(!success) {
+              return "Sorry, something went wrong, please try again.";
+            }
+            return longUrl;
+          },
+          gravity: $.fn.tipsy.autoWE
+        });
+      }
+    );
+  },
+
   transformTweetText: function(oldText) {
     var transformList = [
       {
         //create links
         'expression': /(\b(https?|ftp|file):\/\/[-A-Z0-9+&@#\/%?=~_|!:,.;]*[-A-Z0-9+&@#\/%=~_|])/ig,
-        'replacement': "<a href='javascript:' onclick=\"javascript:openTab('$1')\">$1</a>"
+        'replacement': "<a href='javascript:' onclick=\"javascript:openTab('$1')\" onmouseover=\"Renderer.expandLink(this, '$1')\">$1</a>"
       },
       {
         //create hash search links
