Adding configurable font options.

--- a/background.html
+++ b/background.html
@@ -78,7 +78,9 @@ OptionsBackend = {
     favorites_tweets_color: 'rgba(0, 0, 0, 0)',
 
     notification_fade_timeout: 6000,
-    theme: 'css/chromified.css,css/chromified-theme/jquery-ui-1.7.2.custom.css'
+    theme: 'css/chromified.css,css/chromified-theme/jquery-ui-1.7.2.custom.css',
+    font_family: 'Helvetica, Arial, sans-serif',
+    font_size: '1.0em'
   },
   cachedOptions: null,
   save: function(optionsMap) {
